# mcstat

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: args.yml  cli.rs  lib.rs  main.rs  output.rs
