[package]
name = "mcstat"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
base64 = "0.13.0"
crossterm = "0.21.0"
image = "0.23.14"
itertools = "0.10.1"
serde_json = "1.0.67"
smart-default = "0.6.0"
structopt = "0.3.23"
term_size = "0.3.2"
termcolor = "1.1.2"
unicode-width = "0.1.8"
viuer = "0.5.2"

[dependencies.async-minecraft-ping]
git = "https://github.com/LordMZTE/async-minecraft-ping.git"
tag = "v0.2.5"

[dependencies.tokio]
version = "1.11.0"
features = ["rt-multi-thread", "macros", "time"]

[build-dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
yaml-rust = "0.4.5"
