[package]
name = "mcstat"
version = "0.1.0"
authors = ["LordMZTE <lord@mzte.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
crossterm = "0.23.1"
image = "0.24.1"
itertools = "0.10.3"
miette = { version = "4.3.0", features = ["fancy"] }
serde_json = "1.0.79"
smart-default = "0.6.0"
term_size = "0.3.2"
termcolor = "1.1.3"
trust-dns-resolver = { version = "0.21.2", features = ["tokio-runtime"] }
unicode-width = "0.1.9"
viuer = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
tracing-subscriber = "0.3.10"
tracing = "0.1.32"
clap = { version = "3.1.8", features = ["derive"] }

[dependencies.async-minecraft-ping]
git = "https://github.com/LordMZTE/async-minecraft-ping.git"
tag = "v0.3.0"

[dependencies.tokio]
version = "1.17.0"
features = ["rt-multi-thread", "macros", "time"]

[features]
